build/errors/testdata/unknown-field.q
struct Point {
	x Int
	y Int
}

main() {
	let p = Point()
	p.z = 5
}
